♻️ update preprocessing pipeline

--- a/notebooks/new/phrase_level.ipynb
+++ b/notebooks/new/phrase_level.ipynb
@@ -129,9 +129,11 @@
     "    return text\n",
     "\n",
     "# Preprocessing pipeline\n",
-    "def ar_preprocess_pipeline(data) -> 'list':\n",
+    "def ar_preprocess_pipeline(data: str) -> 'list':\n",
+    "    \n",
     "    # Split by newline character\n",
-    "    sentences = data.split('\\n')\n",
+    "    sentences = data.replace('.', '\\n').split('\\n')\n",
+    "    \n",
     "    for i in range(len(sentences)):\n",
     "        sentences[i] = ar_remove_emojis_and_special_characters(sentences[i])\n",
     "    # Remove leading and trailing spaces\n",
@@ -412,11 +414,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nltk.util import everygrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "ar_data = ar_data[:270000]\n",
     "\n",
     "# Tokenize words\n",
     "tokenized_sentences = ar_preprocess_pipeline(ar_data)\n",
+    "\n",
     "ar_tokenizer = Tokenizer(oov_token='<oov>')\n",
     "ar_tokenizer.fit_on_texts(tokenized_sentences)\n",
     "total_words = len(ar_tokenizer.word_index) + 1\n",
@@ -425,34 +437,62 @@
     "\n",
     "\n",
     "# Generate input sequences\n",
+    "MAX_SEQUENCE_LENGTH = 8\n",
+    "\n",
     "input_sequences = []\n",
     "for line in tokenized_sentences:\n",
     "    token_list = ar_tokenizer.texts_to_sequences([line])[0]\n",
-    "    for i in range(1, len(token_list)):\n",
-    "        n_gram_sequence = token_list[:i + 1]\n",
-    "        input_sequences.append(n_gram_sequence)\n",
+    "    \n",
+    "    # use everygrams\n",
+    "    input_sequences.append(list(everygrams(token_list, max_len=MAX_SEQUENCE_LENGTH, min_len=2)))\n",
+    "    \n",
+    "    \n",
+    "    # for i in range(1, len(token_list)):\n",
+    "    #     n_gram_sequence = token_list[:i + 1]\n",
+    "    #     input_sequences.append(n_gram_sequence)\n",
     "\n",
     "# Pad sequences\n",
-    "max_sequence_len = max([len(x) for x in input_sequences])\n",
+    "max_sequence_len = MAX_SEQUENCE_LENGTH\n",
     "input_sequences = np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Creates labels with input sequences\n",
     "X,labels = input_sequences[:,:-1],input_sequences[:,-1]\n",
-    "ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)\n",
+    "ys = tf.keras.utils.to_categorical(labels, num_classes=total_words)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Split data into training, validation, and test sets\n",
     "X_train_temp, X_val_test, y_train_temp, y_val_test = train_test_split(X, ys, test_size=0.2, random_state=42)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_val_test, y_val_test, test_size=0.5, random_state=42)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Define your model\n",
     "ar_model = tf.keras.Sequential()\n",
-    "ar_model.add(tf.keras.layers.Embedding(total_words, 80))\n",
-    "ar_model.add(tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(100)))\n",
+    "ar_model.add(tf.keras.layers.Embedding(total_words, 120))\n",
+    "ar_model.add(tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(150)))\n",
     "ar_model.add(tf.keras.layers.Dropout(0.2))\n",
     "ar_model.add(tf.keras.layers.Dense(total_words, activation='softmax'))\n",
     "\n",
@@ -729,16 +769,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'صناعة ألماس شديد الشبه بالألماس الطبيعي بواسطة الليزر وبتكلفة'"
+       "'صناعة ألماس شديد الشبه بالألماس الطبيعي بواسطة الليزر وبتكلفة قل'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,16 +790,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[363, 4742, 1695, 11045, 11046, 118, 2106, 11047, 4514]"
+       "[363, 4742, 1695, 11045, 11046, 118, 2106, 11047, 4514, 14613]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,18 +812,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[    0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "            0,   363,  4742,  1695, 11045, 11046,   118,  2106, 11047,\n",
-       "         4514]], dtype=int32)"
+       "          363,  4742,  1695, 11045, 11046,   118,  2106, 11047,  4514,\n",
+       "        14613]], dtype=int32)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +898,7 @@
        " 'بدء']"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
